spacing problem solved

--- a/src/Recommended/Recommended.css
+++ b/src/Recommended/Recommended.css
@@ -1,10 +1,10 @@
 .recommended-flex {
   display: flex;
-  margin-left: 20rem;
+  margin-left: 2rem;
 }
 
 .recommended-title {
-  margin-left: 20rem;
+  margin-left: 2rem;
   margin-bottom: 20px;
   margin-top: 20px;
   font-size: 20px;
