--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ li {
 }
 
 .wrap {
-  max-width: 1440px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
 }
